CRNT-32807: Seems that the test cases needs more memory